[Add Feature]Observer For Messages

--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -14,7 +14,7 @@ No messages in your Inbox
                 </div>
                 <div class="panel-body">
                     <div class="row">
-                        	<% talk.messages.each do |message| %>
+                        	<% talk.latest_messages.each do |message| %>
 								 <p>
 								    <small>
 								    Enviado por:
