--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,7 +1,7 @@
   
   <div class="login-col-form_regist col-md-8">
      
-         <div class="well ">
+         <div class="well col">
             <legend><a href="http://www.jquery2dotnet.com"><i class="glyphicon glyphicon-globe"></i></a> Sign up!</legend>
             <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name) ,:html=>{:class=>"form"}) do |f| %>
               <%= devise_error_messages! %>
