Funcoes para user tipo user.follow(user)

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -27,6 +27,12 @@
 
 </div>
 
+<% if current_user != nil %>
+  <% if @user.id != current_user.id %>
+    
+  <% end %>
+<% end %>
+
 <div class="text-center">
             <button class="demo btn btn-primary btn-lg" data-toggle="modal" href="#responsive">Mandar Mensagem</button>
 </div>
