--- a/app/views/layouts/_sidebar_right_ad.html.erb
+++ b/app/views/layouts/_sidebar_right_ad.html.erb
@@ -1,4 +1,8 @@
-<h4 style="text-align:right"><span class="label label-info" >Publicidade</span></h4>
+<div class="panel" style="margin-bottom: 5px; margin-top: 40px">
+<div class="panel-heading">
+            <h3 class="panel-title">Publicidade</h3>
+        </div>
+</div>
 
 <ul class="thumbnails list-unstyled">
 
