--- a/app/views/layouts/_sidebar_right_featured.html.erb
+++ b/app/views/layouts/_sidebar_right_featured.html.erb
@@ -1,3 +1,9 @@
+<div class="panel" style="margin-bottom:5px">
+<div class="panel-heading">
+            <h3 class="panel-title">Destaques</h3>
+        </div>
+</div>
+
 <ul class="thumbnails list-unstyled">
 
   <li style="margin-bottom: -25px">
