--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
 
   <%= csrf_meta_tags %>
 </head>
-<body>
+<body style="background-color:#f5f5f5">
 	<!--
 	<p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
