[Design] novo fiz da top navbar

--- a/app/assets/stylesheets/theme.css
+++ b/app/assets/stylesheets/theme.css
@@ -8,6 +8,20 @@
 
 /********** HEADER **********/
 
+#header-bar{
+  width:250px;
+
+}
+
+
+#navbarToggle{
+  position:fixed;
+  top:0;
+  right:0;
+
+}
+
+
 #bs-example-navbar-collapse-1{
   background-color: #00A75D;
   width:100%;
@@ -234,6 +248,7 @@ color:  #293a49;
 #menu-toggle {
   display: inline-block;
   margin-top: 10px;
+  
 }
 
 .inset {
