--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,24 +1,28 @@
 <nav class="navbar navbar-default navbar-fixed-top" id="navbarAgro" role="navigation">
   <!-- Brand and toggle get grouped for better mobile display -->
-  <div class="navbar-header">
+  <div class="navbar-header" id="header-bar">
     
     <img id="agrosocial_logo" src="/assets/logo_button.svg" alt="AgroSocial Logo" class="img-circle">
     <a class="navbar-brand" id="brandAgro" href="/">AgroSocial</a>
 
     <a id="menu-toggle" href="#" class="btn btn-default"><i class="fa fa-reorder"></i></a>
 
-    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+    
+
+  </div>
+
+  <button type="button" id="navbarToggle" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
       <span class="sr-only">Toggle navigation</span>
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
     </button>
-
-  </div>
+    
 
   <!-- Collect the nav links, forms, and other content for toggling -->
   <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
- 
+    
+
     <ul class="nav navbar-nav navbar-right">
       
       <li class="container" id="searchBox" role="search">
