--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,74 +1,107 @@
-  <div class="col-md-6 login-col-slogan">
+<div id="regist_user">
+<div class="well regist_pag">
+    <ul class="nav nav-tabs">
+      <li class="active"><a href="#home" data-toggle="tab">Perfil</a></li>
+      <li><a href="#profile" data-toggle="tab">Password</a></li>
+    </ul>
+    <div id="myTabContent" class="tab-content">
+      <div class="tab-pane active in" id="home">
+        
+           <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put ,:class=>"form-signin tab"}) do |f| %>
+          <%= devise_error_messages! %>
 
-    <h1 class="text-center login-title"> AGROSOCIAL </h1>
-    <h4 class= " text-center login-slogan">A SEMENTE DO SEU NEGÓCIO</h4>
+           <br/>
+            <div class ="regist_util_items" >
+              <%= f.label :avatar,"Image" %><br />
+              <%= image_tag current_user.avatar %><br />
+              <%= f.file_field :avatar ,:class=>"form-control"%>
+            </div>
+             <br />
             
+           
+                <div class ="regist_util_items" ><%= f.label :username %><br />
+                 <%= f.text_field :username ,:class=>"form-control"%>
+                </div>
+                
+                <br/>
+                 <div class="form-control regist_util_items">
+                  <%= f.label :city_id %>
+
+                  <%= f.collection_select(:city_id,@cities,:id,:city, :include_blank => 'Escolha uma opção')  %>
+                </div>        
+          
+
+          <br />
+            <div class ="regist_util_items" >
+              <%= f.label :email %><br />
+              <%= f.email_field :email, :autofocus => true,:class => "form-control" %>
+            </div>
+
+          <br />
+      <div class="row">
+            <div class="col-xs-6 col-md-6 field regist_util_items" >
+             <%= f.label :birthday %><br />
+             <%= f.text_field :birthday, :label => "Date",  :class => ['datepicker','form-control'] %>
+           </div>
+        
+           
+          <div class ="col-xs-6 col-md-6 regist_util_items" >
+            <%= f.label :phone, "Phone"%><br />
+            <%= f.text_field :phone ,:class=>"form-control" %>
+          </div>
+           <br />
+     </div>
+
+          <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
+            <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
+          <% end %>
+          
+           <br />
+           <div class="btn btn-primary">
+            <%= f.submit "Update" %>
+          </div>
+         <br />
+        <% end %>
   </div>
-  <div class="col-md-4 login-col-form">
-            
-    <div class="account-wall login_content">
+      <div class="tab-pane fade" id="profile">
+      <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put ,:class=>"form-signin tab2"}) do |f| %>
+          <%= devise_error_messages! %>
+          <br/>
+          <div class ="regist_util_items" >
+          <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
+          <%= f.password_field :password, :autocomplete => "off" ,:class=>"form-control"%>
+          </div>
+         <br />
+          <div class ="regist_util_items" >
+            <%= f.label :password_confirmation %><br />
+            <%= f.password_field :password_confirmation ,:class=>"form-control"%>
+          </div>
+           <br />
+          <div class ="regist_util_items" >
+            <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
+            <%= f.password_field :current_password ,:class=>"form-control"%>
+          </div>
+          <br/>
+          <div class="btn btn-primary">
+            <%= f.submit "Update" %>
+          </div>
 
-      <h2>Edit <%= resource_name.to_s.humanize %></h2>
-
-      <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put ,:class=>"form-signin"}) do |f| %>
-      <%= devise_error_messages! %>
-
-      <div>
-        <%= f.label :avatar,"Image" %><br />
-        <%= image_tag current_user.avatar %><br />
-        <%= f.file_field :avatar ,:class=>"form-control"%>
-      </div>
-
-      <div><%= f.label :username %><br />
-      <%= f.text_field :username ,:class=>"form-control"%></div>
-
-      <%= f.label :city_id, "City" %><br />
-      <div class="form-control">
-        <%= f.collection_select(:city_id,@cities,:id,:city, :include_blank => 'Escolha uma opção')  %>
-      </div>
-
-      <div>
-        <%= f.label :email %><br />
-        <%= f.email_field :email, :autofocus => true,:class => "form-control" %>
-      </div>
-
-      <div class="field">
-	     <%= f.label :birthday %><br />
-	     <%= f.text_field :birthday, :label => "Date",  :class => ['datepicker','form-control'] %>
-	   </div>
-
-      <div>
-        <%= f.label :phone, "Phone"%><br />
-        <%= f.text_field :phone ,:class=>"form-control" %>
-      </div>
-
-      <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-        <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
+           <br />
       <% end %>
-
-      <div>
-        <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
-        <%= f.password_field :password, :autocomplete => "off" ,:class=>"form-control"%>
       </div>
+  </div>
 
-      <div>
-        <%= f.label :password_confirmation %><br />
-        <%= f.password_field :password_confirmation ,:class=>"form-control"%>
-      </div>
+        <div class="btn cancel">
+             <%= link_to "Cancelar", :back %>
+        </div>
+       
+  </div>
+  <div id="cancel_count">
+         <h4>Apagar a Conta</h4>
 
-      <div>
-        <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
-        <%= f.password_field :current_password ,:class=>"form-control"%>
-      </div>
+        <p>Deseja apagar a conta? <%= button_to "Cancel my account", registration_path(resource_name), :data => { :confirm => "Are you sure?" }, :method => :delete %></p>
+  </div>
 
-      <div>
-        <%= f.submit "Update" %>
-      </div>
-    <% end %>
-</div>
-<h3>Cancel my account</h3>
-
-<p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), :data => { :confirm => "Are you sure?" }, :method => :delete %></p>
-
-<%= link_to "Back", :back %>
-</div>
+   
+</div>    
+  
