[Update]Added price_types to adminZone

--- a/app/views/admin/price_types/index.html.erb
+++ b/app/views/admin/price_types/index.html.erb
@@ -1,10 +1,10 @@
-<h1>Listing price_types</h1>
+<h1>Lista de Tipos de Preços</h1>
 
 <div class="table-responsive">
   <table class="table table-hover" >
   <thead>
     <tr>
-      <th>Name</th>
+      <th>Nome</th>
       <th></th>
       <th></th>
       <th></th>
@@ -25,4 +25,4 @@
 </div>
 <br>
 
-<%= link_to 'New Price type', new_admin_price_type_path %>
+<%= link_to 'Novo Tipo de Preço', new_admin_price_type_path %>
