--- a/app/views/ads/_form.html.erb
+++ b/app/views/ads/_form.html.erb
@@ -47,6 +47,12 @@
           (mapa)
   </div>
 
+
+   <div class="field col-lg-7 col-sm-7">
+    <%= f.label :expire_date %><br />
+    <%= f.text_field :expire_date, :label => "Date",  :class => 'datepicker' %>
+  </div>
+
   <div class="field" style="margin-top:8px">
          <%= f.label :images, "Adicionar Imagens" %><br>
          
