[Bug Fix] Messages Box

--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -79,7 +79,7 @@ No messages in your Inbox
                         </ul>
                     </div>
                 </div>
-                <div class="panel-body">
+                <div class="panel-bodyMessage">
                      <ul class="chat">
                     <% talk.latest_messages.each do |message| %>
 
