--- a/app/assets/stylesheets/theme.css
+++ b/app/assets/stylesheets/theme.css
@@ -454,12 +454,9 @@ label.error {
     color: #777777;
 }
 
-.panel .slidedown .glyphicon, .chat .glyphicon
-{
-    margin-right: 5px;
-}
 
-.panel-body
+
+.panel-bodyMessage
 {
     overflow-y: scroll;
     height: 250px;
