--- a/app/views/admin/users/show.html.erb
+++ b/app/views/admin/users/show.html.erb
@@ -7,7 +7,7 @@
 <p>Nome: <%= @admin_user.name %></p>
 <p>Nickname: <%= @admin_user.username %></p>
 <p>Email: <%= @admin_user.email %></p>
-<p>Cidade: <%= @admin_user.city_id %></p>
+<p>Cidade: <%= @admin_user.city.city %></p>
 <p>Aniversário: <%= @admin_user.birthday %> Falta o FORMAT</p>
 <p>Telefone: <%= @admin_user.phone %></p>
 <p>Criado em: <%= @admin_user.created_at %></p>
