--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -19,7 +19,7 @@
       <tr>
         <td><%= user.name %></td>
         <td><%= user.username %></td>
-        <td><%= user.city_id %></td>
+        <td><%= user.city.city %></td>
         <td><%= user.email %></td>
         <td><%= link_to 'Show', admin_user_path(user) %></td>
         <td><%= link_to 'Edit', edit_admin_user_path(user) %></td>
