--- a/app/views/ads/show.html.erb
+++ b/app/views/ads/show.html.erb
@@ -157,57 +157,9 @@
   </tr>
 </table>
 
-      <legend>LAST WEEK</legend>
 
-<% @c.each do |ad| %>
-        <li class="col-sm-3 col-md-3 thing <%= ad.category.name %>">
-          <div class="thumbnail" id="thumbnail_ad" style="padding: 0">
-            <span class='price' ><%= ad.price %>€</span>
-            <div style="padding:4px" >
-              <%= link_to ad_image( ad.ad_images.first ), ad %>
-              <% if !ad.category.blank? %>
-                <div class="caption">
-                <% if ad.category.nil? %>
-                  <span class="label" style="background-color: #888888">
-                <% else %>
-                  <span class="label" style="background-color: #<%= ad.category.color %>">
-                    <%= ad.category.name %>
-                <% end %>
-                  </span>
-              <% end %>
-              <h2><%= link_to ad.title, ad %></h2>
-              <p><i class="fa fa-map-marker"></i> <%= ad.city.city unless ad.city.blank? %></p>
-            </div>
-          </div>
-        </li>
-      <% end %>
-
-      <legend>LAST N</legend>
-      <% @v.each do |ad| %>
-        <li class="col-sm-3 col-md-3 thing <%= ad.category.name %>">
-          <div class="thumbnail" id="thumbnail_ad" style="padding: 0">
-            <span class='price' ><%= ad.price %>€</span>
-            <div style="padding:4px" >
-              <%= link_to ad_image( ad.ad_images.first ), ad %>
-              <% if !ad.category.blank? %>
-                <div class="caption">
-                <% if ad.category.nil? %>
-                  <span class="label" style="background-color: #888888">
-                <% else %>
-                  <span class="label" style="background-color: #<%= ad.category.color %>">
-                    <%= ad.category.name %>
-                <% end %>
-                  </span>
-              <% end %>
-              <h2><%= link_to ad.title, ad %></h2>
-              <p><i class="fa fa-map-marker"></i> <%= ad.city.city unless ad.city.blank? %></p>
-            </div>
-          </div>
-        </li>
-      <% end %>
-
-
-
-
+<%#  Only the ad's owner can edit it  %>
+<% if user_signed_in? && current_user.id == @ad.user_id %>
 <%= link_to 'Edit', edit_ad_path(@ad) %> |
+<% end %>
 <%= link_to 'Back', users_myads_path %>
