--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -65,57 +65,68 @@ No messages in your Inbox
                             <span class="fa fa-chevron-down"></span>
                         </button>
                         <ul class="dropdown-menu slidedown">
-                            <li><a href="http://www.jquery2dotnet.com"><span class="fa fa-refresh">
+                            <li><a href="#"><span class="fa fa-refresh">
                             </span>Refresh</a></li>
-                            <li><a href="http://www.jquery2dotnet.com"><span class="fa fa-ok-sign">
+                            <li><a href="#"><span class="fa fa-ok-sign">
                             </span>Available</a></li>
-                            <li><a href="http://www.jquery2dotnet.com"><span class="fa fa-remove">
+                            <li><a href="#"><span class="fa fa-remove">
                             </span>Busy</a></li>
-                            <li><a href="http://www.jquery2dotnet.com"><span class="fa fa-time"></span>
+                            <li><a href="#"><span class="fa fa-time"></span>
                                 Away</a></li>
                             <li class="divider"></li>
-                            <li><a href="http://www.jquery2dotnet.com"><span class="fa fa-off"></span>
+                            <li><a href="#"><span class="fa fa-off"></span>
                                 Sign Out</a></li>
                         </ul>
                     </div>
                 </div>
                 <div class="panel-bodyMessage">
-                     <ul class="chat">
-                    <% talk.latest_messages.each do |message| %>
-
+                    <ul class="chat">
+                        <% talk.latest_messages.each do |message| %>
+                          <% if message.user.id != current_user.id %>
                             <li class="left clearfix"><span class="chat-img pull-left">
-                                <img src="http://placehold.it/50/55C1E7/fff&text=U" alt="User Avatar" class="img-circle" />
-
-                                </span>
-                            <div class="chat-body clearfix">
-                                <div class="header">
-                                    <strong class="primary-font">Jack Sparrow</strong> <small class="pull-right text-muted">
-                                        <span class="fa fa-time"></span><%= message.created_at %></small>
-                                </div>
-                                <p>
-                                  <%= message.text %>
-                                    
-                                </p>
-                            </div>
-                        </li>
-
-                                 <p>
-                                    <small>
-                                    Enviado por:
-                                      <%= message.user_sender %> - 
-                                      <%= message.user.name %>
-                                    As:
-                                      
-                                    </small>
+                              <% if message.user.avatar != nil %>
+                                <%= image_tag(message.user.avatar.url(:thumb), :alt => "User Avatar", :width => '50', :height => '50', :class => "img-circle") %></span>
+                              <% else %>
+                                <img width="50" alt="50x50" src="missing_photo.png" alt="User Avatar" class="img-circle" />
+                              <% end %>
+                              </span>
+                              <div class="chat-body clearfix">
+                                  <div class="header">
+                                        <strong class="primary-font">
+                                        <%= message.user.username %>
+                                      </strong> 
+                                      <small class="pull-right text-muted">
+                                          <span class="fa fa-time"></span><%= message.created_at %>
+                                      </small>
+                                  </div>
+                                  <p>
+                                    <%= message.text %>
                                   </p>
-                                  
-                                  <%= message.talk_id %>
-                                  <p hidden="true">
-                                    <strong>is_read:</strong>
-                                    <%= message.is_read %>
+                              </div>
+                            </li>
+                          <% else %>
+                            <li class="right clearfix"><span class="chat-img pull-right">
+                              <% if message.user.avatar != nil %>
+                                <%= image_tag(message.user.avatar.url(:thumb), :alt => "User Avatar", :width => '50', :height => '50', :class => "img-circle") %></span>
+                              <% else %>
+                                <img width="50" alt="50x50" src="missing_photo.png" alt="User Avatar" class="img-circle" />
+                              <% end %>
+                              </span>
+                              <div class="chat-body clearfix">
+                                  <div class="header">
+                                      <small class="text-muted">
+                                          <span class="fa fa-time"></span><%= message.created_at %>
+                                      </small>
+                                      <strong class="pull-right primary-font">
+                                        <%= message.user.username %>
+                                      </strong> 
+                                  </div>
+                                  <p>
+                                    <%= message.text %>
                                   </p>
-                              
-
+                              </div>
+                            </li>
+                          <% end %>
                         <% end %>
                     </ul>
                 </div>
