--- a/app/views/layouts/_sidebar_left.html.erb
+++ b/app/views/layouts/_sidebar_left.html.erb
@@ -89,7 +89,7 @@
 
           <% @categories.each do |cat| %>
           <li>
-            <%= check_box_tag "search[]",cat.id %>
+            <%= check_box_tag "search[]","cat:#{cat.id}" %>
             <%= cat.name %>
           </li>
           <% end %>
@@ -104,7 +104,7 @@
         <ul>
           <% @cities.each do |city| %>
           <li>
-            <%= check_box_tag "search[]",city.id %>
+            <%= check_box_tag "search[]","city:#{city.id}"%>
             <%= city.city %>
           </li>
           <% end %>
