--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -125,13 +125,13 @@
         <!-- ACADEMIA -->
         <% expired_ads=current_user.expired_ads %>
         <li class="dropdown messages-dropdown">
-          <% if expired_ads.count >0 %>
+          <% if expired_ads.length >0 %>
             <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-book"></i><span class="badge" id="custom-badge"><%= expired_ads.count %></span><b class="caret"></b></a>
           <% else %>
             <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-book"></i><b class="caret"></b></a>
           <% end %>
           <ul class="dropdown-menu">
-            <% if expired_ads.count > 0 %>
+            <% if expired_ads.length > 0 %>
               <li class="dropdown-header"><%= expired_ads.count %> ads have expired</li>
               <% first_expired_ads = expired_ads.limit(5) %>
               <% first_expired_ads.each do |ad| %>
