--- a/app/assets/stylesheets/theme.css
+++ b/app/assets/stylesheets/theme.css
@@ -61,9 +61,21 @@
   color: white;
 }
 
-.caret{
-  color: #fff;
+#dropCarret{
+  border-top-color: #fff;
+  /*border-bottom-color: rgb(51, 51, 51);*/
 }
+
+a:hover #dropCarret{
+  border-top-color: rgb(51, 51, 51);
+  /*border-bottom-color: rgb(51, 51, 51);*/
+}
+
+.fa-sort-asc{
+  color: #fff;
+  font-size: 12px;
+}
+
 
 #omnisearch{
   width: 300px;
@@ -73,11 +85,17 @@
   margin-left: 0%;
 }
 
-.fa-user, .fa-envelope-o, .fa-globe, .fa-book, .fa-bell-o, .fa-tags, .fa-folder-open-o, .fa-search{
+.fa-user, .fa-envelope-o, .fa-globe, .fa-book, .fa-bell-o, .fa-tags, .fa-folder-open-o, .fa-search, #userNick{
   color: #fff;
   font-size: 22px;
-
 }
+
+#userNick{
+  color: #fff;
+  font-size: 14px;
+}
+
+
 .dropdown-toggle{
   margin-left: -5px;
   margin-right: -5px;
