--- a/app/views/layouts/_sidebar_right_featured.html.erb
+++ b/app/views/layouts/_sidebar_right_featured.html.erb
@@ -1,3 +1,41 @@
+
+<section class="panel">
+        <header class="panel-heading">
+            Mais Vistos
+        </header>
+        <div class="panel-body">
+            <div>
+                <article class="media">
+                    <a class="pull-left thumb p-thumb">
+                        <img src="http://placehold.it/50x50">
+                    </a>
+                    <div class="media-body">
+                        <a href="#" class=" p-head">Item One Tittle</a>
+                        <p>Lorem ipsum dolor sit amet</p>
+                    </div>
+                </article>
+                <article class="media">
+                    <a class="pull-left thumb p-thumb">
+                       <img src="http://placehold.it/50x50">
+                    </a>
+                    <div class="media-body">
+                        <a href="#" class=" p-head">Item Two Tittle</a>
+                        <p>Lorem ipsum dolor sit amet</p>
+                    </div>
+                </article>
+                <article class="media">
+                    <a class="pull-left thumb p-thumb">
+                        <img src="http://placehold.it/50x50">
+                    </a>
+                    <div class="media-body">
+                        <a href="#" class=" p-head">Item Three Tittle</a>
+                        <p>Lorem ipsum dolor sit amet</p>
+                    </div>
+                </article>
+            </div>
+        </div>
+</section>
+
 <div class="panel" style="margin-bottom:5px">
 <div class="panel-heading">
             <h3 class="panel-title">Destaques</h3>
