--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -159,7 +159,12 @@
 
         <!-- USER-->
         <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown"><span id="userNick"><%= current_user.username %></span><b class="caret" id="dropCarret"></b></a>
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+            <% image_tag current_user.avatar.url%>
+            <span id="userNick"><%= current_user.username %></span>
+            <b class="caret" id="dropCarret"></b>
+          </a>
+
           <ul class="dropdown-menu">
 
             <!-- Messages -->
