modified: right bar

--- a/app/views/layouts/_sidebar_right_ad.html.erb
+++ b/app/views/layouts/_sidebar_right_ad.html.erb
@@ -1,8 +1,8 @@
-<div class="panel" style="margin-bottom: 5px; margin-top: 40px">
+<div class="panel" style="padding:5px">
 <div class="panel-heading">
             <h3 class="panel-title">Publicidade</h3>
         </div>
-</div>
+
 
 <ul class="thumbnails list-unstyled">
 
@@ -31,3 +31,4 @@
   </li>
 
 </ul>
+</div>
