--- a/app/views/layouts/_sidebar_right_featured.html.erb
+++ b/app/views/layouts/_sidebar_right_featured.html.erb
@@ -36,11 +36,11 @@
         </div>
 </section>
 
-<div class="panel" style="margin-bottom:5px">
+<div class="panel" style="padding:5px">
 <div class="panel-heading">
             <h3 class="panel-title">Destaques</h3>
         </div>
-</div>
+
 
 <ul class="thumbnails list-unstyled">
 
@@ -93,3 +93,6 @@
   </li>
 
 </ul>
+
+        
+</div>
