--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,18 +1,82 @@
+ 
+
 <h1>User#index</h1>
-<p>Find me in app/views/user/index.html.erb</p>
-<table class="table">
-	<tr>
-		<td>Nome</td>
-		<td>Nickname</td>
-		<td>Link</td>
-		
-	</tr>
-	<% @user.each do |user| %>
-	<tr>
-		<td><%= user.name %></td>
-		<td><%= user.email %></td>
-		<td><%= link_to 'Ver', user_path(user) %></td>
-	</tr>
-	<% end %>
-</table>
-<%= link_to "Home",root_path%> | <%= link_to "Voltar",:back %>
+<p>Find me in app/views/users/index.html.erb</p>
+<br><br>
+<div class="container">
+ <div class="well col-sm-12 col-md-8 col-md-offset-2">
+        <div class="row user-row">
+            <div class="col-md-1">
+                <img class="img-circle"
+                     src="https://lh5.googleusercontent.com/-b0-k99FZlyE/AAAAAAAAAAI/AAAAAAAAAAA/eu7opA4byxI/photo.jpg?sz=50"
+                     alt="User Pic">
+            </div>
+         <% @user.each do |user| %>
+
+			            <div class="col-md-10">
+			                <strong><%= user.name %></strong><br>
+			                <span class="text-muted">User level: Administrator</span>
+			            </div>
+			            <div class="col-md-1 dropdown-user" data-for=".cyruxx">
+			                <i class="glyphicon glyphicon-chevron-down text-muted"></i>
+			            </div>
+			        </div>
+			        <div class="row user-infos cyruxx">
+			            <div class="col-sm-10 col-md-10 col-md-offset-1">
+			                <div class="panel panel-primary">
+			                    <div class="panel-heading">
+			                        <h3 class="panel-title">Informacao do Utilizador</h3>
+			                    </div>
+			                    <div class="panel-body">
+			                        <div class="row">
+			                            <div class="col-md-3">
+			                                <img class="img-circle"
+			                                     src="https://lh5.googleusercontent.com/-b0-k99FZlyE/AAAAAAAAAAI/AAAAAAAAAAA/eu7opA4byxI/photo.jpg?sz=100"
+			                                     alt="User Pic">
+			                            </div>
+			                            <div class="col-md-6">
+			                                <strong><%= user.name %></strong><br>
+			                                <table class="table table-condensed table-responsive table-user-information">
+			                                    <tbody>
+			                                    <tr>
+			                                        <td>Nickname:</td>
+			                                        <td><%= user.username %></td>
+			                                    </tr>
+			                                    <tr>
+			                                        <td>Email:</td>
+			                                        <td><%= user.email %></td>
+			                                    </tr>
+			                                    <tr>
+			                                        <td>Cidade</td>
+			                                        <td><%= user.city.city %></td>
+			                                    </tr>
+			                                    <tr>
+			                                        <td>Aniversário</td>
+			                                        <td><%= user.birthday %></td>
+			                                    </tr>
+			                                    </tbody>
+			                                </table>
+			                            </div>
+			                        </div>
+			                    </div>
+			                    <div class="panel-footer">
+			                        <button class="btn btn-sm btn-primary" type="button"
+			                                data-toggle="tooltip"
+			                                data-original-title="Send message to user"><i class="glyphicon glyphicon-envelope"></i></button>
+			                        <span class="pull-right">
+			                            <button class="btn btn-sm btn-warning" type="button"
+			                                    data-toggle="tooltip"
+			                                    data-original-title="Edit this user"><i class="glyphicon glyphicon-edit"></i></button>
+			                            <button class="btn btn-sm btn-danger" type="button"
+			                                    data-toggle="tooltip"
+			                                    data-original-title="Remove this user"><i class="glyphicon glyphicon-remove"></i></button>
+			                        </span>
+			                    </div>
+			                </div>
+			            </div>
+			        </div>
+     <% end %>
+   
+    </div>
+    <%= link_to "Home",root_path%> | <%= link_to "Voltar",:back %>
+</div>
