--- a/app/views/layouts/_sidebar_left.html.erb
+++ b/app/views/layouts/_sidebar_left.html.erb
@@ -13,7 +13,7 @@
 
         <div id="collapseAds" class="panel-collapse collapse in">     
           <li><%= link_to "Ver Todos".html_safe , ads_path %></li> 
-          <li><%= link_to "Os Meus Anúncios".html_safe , users_myads_path %></li>
+          <li><%= link_to "Os Meus Anúncios".html_safe , myads_user_path(current_user.id) %></li>
           <li><%= link_to "Novo Anúncio".html_safe , new_ad_path %></li>
         </div>
 
