--- a/app/views/ads/_form.html.erb
+++ b/app/views/ads/_form.html.erb
@@ -47,6 +47,13 @@
           (mapa)
   </div>
 
+  <label>Address: </label>
+        <input id="addresspicker_map" />
+        <div style="width:600px;height:300px;margin-top:20px">
+            <div id="map_canvas" style="width:100%; height:100%"></div>
+            <div id="location" class=""></div>
+        </div>
+
 
    <div class="field col-lg-7 col-sm-7">
     <%= f.label :expire_date %><br />
