--- a/app/views/ads/show.html.erb
+++ b/app/views/ads/show.html.erb
@@ -41,7 +41,9 @@
   	          <% while (i < num_img) do %>
   	            <div class="<% if i>0 %>item<% else %>active item<% end %>" style="height: 200px; width: 200px;" valign="middle">
   	              <table width="100%" height="100%" valign="middle"><tr><td>
-  	                <%= image_tag @ad.ad_images[i].image(:small), :width => "100%" %>
+                   <a href="<%= @ad.ad_images[i].image.url %>" rel="prettyPhoto[ad_gallery_carousel]">
+  	                  <%= image_tag @ad.ad_images[i].image(:small), :width => "100%" %>
+                   </a>
   	              </td></tr></table>
   	            </div>
                  <% i+=1 %>
@@ -72,6 +74,7 @@
            <% end %>
            <% i+=1 %>
          <% end %>
+         <!-- Para centrar a ultima imagem caso o numero de imagens for impar -->
          <% if !i.odd? %>
            <tr>
              <td colspan="2" align="center">
@@ -158,8 +161,9 @@
     </tr>
   </table>
 
-
+<!-- painel dos extras do ad -->
 <section class="panel">
+    <!-- headers -->
     <header class="panel-heading navy">
         <ul class="nav nav-tabs ">
             <li class="active">
@@ -175,12 +179,15 @@
 
         </ul>
     </header>
+    <!-- conteudos -->
     <div class="panel-body">
         <div class="tab-content tasi-tab">
+            <!-- produtos relacionados -->
             <div id="related" class="tab-pane active">
                 <h4 class="pro-d-head">Produtos na mesma Area</h4>
                 <p> </p>
             </div>
+            <!-- reviews -->
             <div id="reviews" class="tab-pane">
                 <article class="media">
                     <a class="pull-left thumb p-thumb">
