--- a/app/views/admin/ads/edit.html.erb
+++ b/app/views/admin/ads/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @ad %> |
-<%= link_to 'Back', ads_path %>
+<%= link_to 'Show', [:admin, @ad] %> |
+<%= link_to 'Back', admin_ads_path %>
