[Update Feature] Add Notification

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,6 +14,8 @@
  *= require bootstrap-datepicker
  *= stub admin_theme
  *= stub sessions
+ *= require jquery.pnotify.default
+ *= require jquery.pnotify.default.icons
  */
 
 .icon_rating, .icon_rating-nocolor{
