--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -84,7 +84,7 @@
           <% if expired_ads.count >0 %>
             <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-tags"></i><span class="badge" id="custom-badge"><%= expired_ads.count %></span><b class="caret" id="dropCarret"></b></a>
           <% else %>
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-book"></i><b class="caret" id="dropCarret"></b></a>
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-tags"></i><b class="caret" id="dropCarret"></b></a>
           <% end %>
           <ul class="dropdown-menu">
 
